restyle create scrollbar, fix border radius, and font emphasis

--- a/client/src/ui/Lobby/create/create.scss
+++ b/client/src/ui/Lobby/create/create.scss
@@ -80,8 +80,10 @@
                 }
             }
             .choose-color {
-                border-radius: m.$border-radius;
+                border-top-left-radius: m.$border-radius;
+                border-top-right-radius: m.$border-radius;
                 cursor: pointer;
+                min-height: 12vh;
                 max-height: 14vh;
                 display: flex; 
                 justify-content: center; 
@@ -91,9 +93,9 @@
                 .piece-color{
                     border-radius: m.$border-radius;
                     z-index:20;
-                    padding: .6rem;
-                    max-height: 17vh;
-                    margin: 10px;
+                    padding: .3rem;
+                    max-height: 18vh;
+                    margin: 0rem 1.5rem .25rem 1.5rem;
                     .pieces {
                         display: block;
                     }
@@ -125,15 +127,15 @@
                 &::-webkit-scrollbar-thumb {
                     background-color: #999999;
                     // border-radius: 8px;
-                    border-color: m.$create-bg-clr;
+                    border-color: m.$create-modal-bg-clr;
                     border-style: solid;
                     border-width: 1px .2rem 1px .2rem;
                 }
                 &::-webkit-scrollbar-track-piece {
-                    background-color: #251f15;
-                    border-color: #251f15;
-                    border-width: 0px .3rem 0px .3rem;
-                    border-style: solid;
+                    background-color: m.$dark;
+                    // border-color: m.$dark;
+                    // border-width: 0px .3rem 0px .3rem;
+                    // border-style: solid;
                     // color: #646464
                 }
 
@@ -177,10 +179,10 @@
                                 // letter-spacing: 5px;
                             }
                             .value {
-                                color: #c9c9c9;
-                                font-size: 1.4rem;
-                                padding-left: 2rem/* 32px */;
-                                padding-right: 2rem/* 32px */;
+                                color: #dad8d8;
+                                font-size: m.$font-size-lg;
+                                padding-left: m.$spacing--xs;
+                                padding-right: .5rem/* 32px */;
                                 padding-top: 0.5rem/* 8px */;
                                 padding-bottom: 0.5rem/* 8px */;
                                 line-height: 1.5rem/* 24px */;
@@ -201,6 +203,10 @@
                 justify-content: center;
                 align-items: center;
                 flex-direction: row-reverse;
+                border-bottom-left-radius: m.$border-radius;
+                border-bottom-right-radius: m.$border-radius;
+                overflow:hidden;
+                font-size: m.$font-size-lg;
 
                 button{
                     // box-shadow: rgba(0, 0, 0, 0.45) 0px 2px 6px; // shadow-sm
@@ -211,6 +217,7 @@
                     width: 100%;
                     display: inline-flex;
                     justify-content: center;
+                    height: 9vh;
 
                     &:focus {
                         outline: 2px solid transparent;
@@ -219,7 +226,7 @@
                 }
 
                 .create{
-                    border-top-left-radius: m.$border-radius;
+
                     margin-left: 0rem/* 16px */;
                     // border-color: #2C2EAF;
                     // border-left:0;
@@ -234,7 +241,6 @@
                     }
                 }
                 .cancel {
-                    border-top-right-radius: m.$border-radius;
                     margin-right: 0rem/* 16px */;
                     background: none;
                     letter-spacing: 5px;
